# gemeinwohl

./: .gitignore  .zenodo.json  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
PyramideComputing/: CoputerBlueprintPlan.txt  ExecutivSumary.txt  Finalize.txt  PatentPlanung.txt  StrategiePapier.txt  Vesta-Monolith_ Thermische Simulation (Digital Twin).md  Vesta-Monolith_ Vollkonzept eines supraleitenden Exascale-Rechenzentrums(1).md  Vesta-Monolith_ Vollkonzept eines supraleitenden Exascale-Rechenzentrums(3).md  Vesta-Monolith_ Vollkonzept eines supraleitenden Exascale-Rechenzentrums.md  dpma_patent_complete.md  dpma_patentantrag_vesta.md  pyramid_computing_v2.md  pyramid_datacenter_blueprint.tsx  vesta_v5_megakonzept.md
docs/: SigillinMapExtension.md  changelog.md  index.md  reference.md
docs/agents/: codexaudit.md  depthbundleexporter.md  evolvergpt.md  fragmentmapper.md  pactdepthgatekeeper.md  syncrunner.md
docs/sigil/: big-files.sigil.yaml
docs/sigils/: ai-policy-sigillin.yaml  conversations-progress.json  todo-sigil.yaml
src/gemeinwohl/: __init__.py  __main__.py
src/gemeinwohl/cli/: __init__.py  main.py
src/gemeinwohl/core/: __init__.py  gemeinwohl.py  kritikalitaet.py
src/gemeinwohl/governance/: __init__.py  policy.py
src/gemeinwohl/integrations/: __init__.py  adapters.py
tests/: __init__.py
tests/contract/: __init__.py  test_contracts.py  test_normative_consistency.py
tests/integration/: __init__.py  test_cli.py  test_engine_policy_integration.py
tests/unit/: __init__.py  test_adapters.py  test_gemeinwohl_engine.py  test_init.py  test_kritikalitaet.py  test_policy.py
